--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DB_CONNECT_STRING = mongodb+srv://admin:admin@cluster0.j9uh5v1.mongodb.net/users?appName=Cluster0
+DB_CONNECT_STRING = mongodb+srv://admin:admin@cluster0.azidb2o.mongodb.net/users?appName=Cluster0
